2008-02-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/classpath/ServiceFactory.java:
	Use generics.
	* gnu/classpath/ServiceProviderLoadingAction.java:
	Likewise.
	
2008-02-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

        PR classpath/34579:
	* m4/ac_prog_javac_works.m4: Change test
	to one that doesn't rely on the compiler's
	class library.
	
2008-02-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>

        PR classpath/34578:
	* NEWS: Mention javah and javac build changes.
	* configure.ac: Call AC_PROG_JAVAC and
	CLASSPATH_JAVAC_MEM_CHECK instead of CLASSPATH_FIND_JAVAC.
	* examples/Makefile.am: Simplify compiler choice
	to just use JAVAC.
	* lib/Makefile.am: Likewise, but with JAVAC_MEM_OPT too.
	* m4/ac_prog_javac.m4: New file.
	* m4/ac_prog_javac_works.m4: Likewise.
	* m4/acinclude.m4:
	(CLASSPATH_FIND_JAVAC): Removed.
	(CLASSPATH_WITH_GCJ): Removed.
	(CLASSPATH_CHECK_GCJ): Removed.
	(CLASSPATH_WITH_JIKES): Removed.
	(CLASSPATH_CHECK_JIKES): Removed.
	(CLASSPATH_WITH_KJC): Removed.
	(CLASSPATH_CHECK_KJC): Removed.
	(CLASSPATH_WITH_ECJ): Removed.
	(CLASSPATH_CHECK_ECJ): Removed.
	(CLASSPATH_WITH_JAVAC): Removed.
	(CLASSPATH_CHECK_JAVAC): Removed.
	(CLASSPATH_JAVAC_MEM_CHECK): Added.
	* tools/Makefile.am: Simplify compiler choice
	to just javac.

2008-02-12  Roman Kennke  <kennke@aicas.com>

	* java/awt/color/ICC_Profile.java
	(getInstance()): Wrap call to InputStream.read(byte[],int,int) in
	a loop, in order to read the whole thing.

2008-02-10  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/remote/NotificationResult.java:
	New file.
	* javax/management/remote/TargetedNotification.java:
	Likewise.
	* javax/management/remote/rmi/RMIConnection.java:
	(fetchNotifications(long,int,long)): Added.
	
2008-02-10  Dalibor Topic  <robilad@kaffe.org>

	* lib/Makefile.am (compile_classpath), include/Makefile.am (JAVAH): 
	Replaced USER_CLASSLIB with PATH_TO_GLIBJ_ZIP.
